--- a/app/views/user/profile/signed_up_with_social.haml
+++ b/app/views/user/profile/signed_up_with_social.haml
@@ -1,9 +1,8 @@
-= simple_form_for(:user, url: edit_signed_up_with_social_user_profile_path, html: { method: :put }) do |f|
+= simple_form_for(@profile, url: edit_signed_up_with_social_user_profile_path, html: { method: :put }) do |f|
  = f.error_notification
  %h1 Please introduce yourself.
  .form-inputs
-  = f.simple_fields_for :profile_attributes do |pf|
-   = pf.input :first_name, required: true, autofocus: true, hint: 'Please set your first'
-   = pf.input :last_name, required: true, hint: 'and last name.'
+ = f.input :first_name, required: true, autofocus: true, hint: 'Please set your first'
+ = f.input :last_name, required: true, hint: 'and last name.'
  .form-actions
-  = f.button :submit, 'Update'
+ = f.button :submit, 'Update'
