--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -22,7 +22,7 @@
        %th Title
        %th
      %tbody.rowlink{ data: { link: 'row' } }
-      = render partial: 'courses/lesson', collection: course.lessons, course: course
+      = render partial: 'courses/lesson', collection: course.lessons.includes(:course), course: course
   #subscribers.tab-pane
    %h1.text-center
     Subscribers
@@ -43,12 +43,12 @@
    - if user_signed_in?
     - if profile_configured?
      = link_to user_course_subscriptions_path(course), method: :post, remote: true,
-         style: ('display: none' if current_user.subscribed_to?(course) || course.prohibited_for?(current_user)),
+         style: ('display: none' unless can?(:subscribe, course)),
          data: { toggle: 'tooltip' }, id: "subscription-btn-#{course.id}",
          title: 'Subscribe to this course' do
       = button_tag 'Subscribe', type: 'button', class: 'btn btn-success'
      = link_to user_course_subscriptions_path(course), method: :delete, remote: true,
-         style: ('display: none' unless current_user.subscribed_to?(course) && !course.prohibited_for?(current_user)),
+         style: ('display: none' unless can?(:unsubscribe, course)),
          data: { toggle: 'tooltip' }, id: "unsubscription-btn-#{course.id}",
          title: 'Unsubscribe from this course' do
       = button_tag 'Unsubscribe',  type: 'button', class: 'btn btn-danger'
