--- a/app/views/courses/_lesson.html.haml
+++ b/app/views/courses/_lesson.html.haml
@@ -1,4 +1,4 @@
-- unless user_signed_in? && current_user.subscribed_to?(course)
+- unless can? :read, lesson
  %tr{class:'rowlink-skip', title: 'Subscribe first to proceed.', data:{toggle: 'tooltip'}}
   %td
    = link_to course_lesson_path(course, lesson) do
