--- a/app/views/lessons/show.html.haml
+++ b/app/views/lessons/show.html.haml
@@ -11,8 +11,7 @@
      %button.btn.btn-primary
       Pass lesson
   .col-md-3
-   %h5 Will start at:
-   %h5 #{@lesson.date_of.to_formatted_s(:long)}
+   %h5 Will start at: #{@lesson.date_of.to_formatted_s(:long)}
    = image_tag @lesson.image.url, alt: 'Lesson image'
   .col-md-8
    %h3.text-center Lesson description:
