--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -3,9 +3,9 @@
 
   = form_tag '#', method: :get, class: 'sidebar-form' do
    .input-group
-    %input.form-control{ name: "q", placeholder:  "Search...", type: "text" }/
+    %input.form-control{ name: 'q', placeholder:  'Search...', type: 'text' }/
     %span.input-group-btn
-     %button#search-btn.btn.btn-flat{ name: "search", type: "submit" }
+     %button#search-btn.btn.btn-flat{ name: 'search', type: 'submit' }
       %i.fa.fa-search
 
   %ul.sidebar-menu
