--- a/app/views/layouts/mail_layout.html.haml
+++ b/app/views/layouts/mail_layout.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %meta{ content: "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no", name: "viewport" }
+    %meta{ content: 'width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name: 'viewport' }
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
