--- a/app/views/lessons/show.html.haml
+++ b/app/views/lessons/show.html.haml
@@ -4,7 +4,9 @@
    %h1.text-center #{@lesson.title}
    - if profile_configured?
     -if can?(:create, advancement)
-     %button.btn.btn-primary#pass-lesson-btn{"data-target" => "#CreateModal", "data-toggle" => "modal", type: "button"}
+
+     %button.btn.btn-primary#pass-lesson-btn{'data-target' => '#CreateModal', 'data-toggle' => 'modal', type: 'button'}
+
       Pass lesson
    -else
     = link_to signed_up_with_social_user_profile_path do
@@ -26,16 +28,16 @@
    %h3.text-center Homework
    #{@lesson.homework_text}
 
-#CreateModal.modal.fade{"aria-labelledby" => "CreateLabel", role: "dialog", tabindex: "-1"}
+#CreateModal.modal.fade{'aria-labelledby' => 'CreateLabel', role: 'dialog', tabindex: '-1'}
 
- .modal-dialog.modal-lg{role: "document"}
+ .modal-dialog.modal-lg{role: 'document'}
   .modal-content
    .modal-header
     - if flash[:error]
      =flash[:error]
 
-    %button.close{"aria-label" => "Close", "data-dismiss" => "modal", type: "button"}
-     %span{"aria-hidden" => "true"} ×
+    %button.close{'aria-label' => 'Close', 'data-dismiss' => 'modal', type: 'button'}
+     %span{'aria-hidden' => 'true'} ×
     %h4#CreateModalLabel.modal-title.text-center Answer for #{@lesson.title}.
 
    .modal-body
