--- a/app/views/user/exclusions/update.js.erb
+++ b/app/views/user/exclusions/update.js.erb
@@ -1,7 +1,7 @@
-<% if @course.prohibited_for?(@user) %>
-  $('#excluded-<%= @user.id %>').show();
-  $('#exclude-<%= @user.id %>').hide();
+<% if @course.prohibited_for?(user) %>
+  $('#excluded-<%= user.id %>').show();
+  $('#exclude-<%= user.id %>').hide();
 <% else %>
-  $('#excluded-<%= @user.id %>').hide();
-  $('#exclude-<%= @user.id %>').show();
+  $('#excluded-<%= user.id %>').hide();
+  $('#exclude-<%= user.id %>').show();
 <% end %>
