--- a/app/views/user/lessons/show.html.haml
+++ b/app/views/user/lessons/show.html.haml
@@ -11,9 +11,9 @@
   %h5 #{@lesson.date_of.to_formatted_s(:long)}
   = image_tag @lesson.image.url, alt: 'Lesson image'
   %br/
-  = link_to 'Edit ', edit_user_course_lesson_path(@course, @lesson)
+  = link_to 'Edit ', edit_user_course_lesson_path(course, @lesson)
   or
-  =link_to 'delete', user_course_lesson_path(@course, @lesson), method: :delete, data: {confirm: 'Are you sure want to delete this lesson?!'}
+  =link_to 'delete', user_course_lesson_path(course, @lesson), method: :delete, data: {confirm: 'Are you sure want to delete this lesson?!'}
   this lesson.
  .col-md-8
   %h3.text-center Lesson description:
