--- a/app/views/user/newsfeeds/_newsfeed.html.haml
+++ b/app/views/user/newsfeeds/_newsfeed.html.haml
@@ -1,4 +1,4 @@
 .post.gray-darker{id: "newsfeed-#{newsfeed.id}"}
  .user-block
-  =render template_path_for_kind(newsfeed.kind), newsfeed: newsfeed
+  =render newsfeed_template_kind_path(newsfeed.kind), newsfeed: newsfeed
  %hr{style:('margin-top:1px; margin-bottom:1px;')}/
